Not working - attempt at refactor